# armatus

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  ReleaseCreation.md
binaries/: armatus  armatus-linux-x64  armatus-v2.3-macos-10.12  armatus-v2.3-ubuntu-x86_64
include/: ArmatusDAG.hpp  ArmatusParams.hpp  ArmatusUtil.hpp  IntervalScheduling.hpp  MatrixParser.hpp  Version.hpp
logo/ArmatusLogo.graffle/: data.plist  image6.tiff  image7.tiff
scripts/: HiCvis.py  README.txt  push-binary.sh
scripts/example/: RaoChr17_10kb.consensus.txt  RaoChr17_10kb.gamma.0.0.txt  chr17_10kb.RAWobserved.REMOVED.git-id  chr20armatus.consensus.txt  chr20dixondomains
src/: Armatus.cpp  ArmatusDAG.cpp  ArmatusParams.cpp  ArmatusUtil.cpp  CMakeLists.txt  IntervalScheduling.cpp  MatrixParser.cpp
